<resources>
    <string name="title_send">Send</string>
    <string name="title_receive">Receive</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_barcode_capture">Scan QR code</string>
    <string name="title_activity_transaction_info">Transaction info</string>
    <string name="action_bar_copy">Copy</string>
    <string name="action_bar_copy_long">Copy to clipboard</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_buy">Buy</string>
    <string name="welcome_activity_create_new_wallet">New wallet</string>
    <string name="welcome_activity_recover_existing_wallet">Recover wallet</string>
    <string name="welcome_activity_sync_with_desktop">Link wallet</string>
    <string name="recover_from_phrase_intro">Enter your recovery phrase from which to perform a recovery</string>
    <string name="show_recovery_phrase_EULA">By using the Gulden app you explicitly and unconditionally agree that you carry all responsibility for the management and storage of your Gulden.</string>
    <string name="recovery_phrase_continue">Continue</string>
    <string name="title_activity_enter_recovery_phrase">Enter recovery phrase</string>
    <string name="show_recovery_phrase_introtext">Below is your secret recovery phrase, write it down and keep it safe. Lose phrase = lose Guldens. Someone else with access to the phrase = lose Guldens.</string>
    <string name="recovery_phrase_acknowledge_writing_down">I wrote it down</string>
    <string name="recovery_phrase_copy">Recovery phrase copied to clipboard</string>
    <string name="address_book_empty_message">To add an address, start a payment and tap \"Add to address book\".</string>
    <string name="address_book_title">Address book</string>
    <string name="transaction_list_empty_title">No Transactions received</string>
    <string name="transaction_list_empty_message">Touch here to buy your first Gulden</string>
    <string name="send_coins_confirm_template">%1$s NLG\n\nto %2$s</string>
    <string name="send_coins_iban_confirm_template">%1$s EUR (%2$s NLG)\n\nto %3$s</string>
    <string name="send_coins_nocks_estimate_template">Approx. G %1$s including IBAN service fee</string>
    <string name="peer_list_fragment_empty">No peers connected</string>
    <string name="block_row_now">just now</string>
    <string name="action_browse">Browse</string>
    <string name="background_sync_off">Off</string>
    <string name="background_sync_daily">Daily</string>
    <string name="background_sync_always">Always</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="status">Status</string>
    <string name="amount_label">Amount</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="tx_status_abandoned">Abandoned</string>
    <string name="tx_status_conflicted">Conflicted</string>
    <string name="tx_status_confirming">Confirming %s/%s</string>
    <string name="tx_status_unconfirmed">Unconfirmed</string>
    <string name="tx_status_confirmed">Confirmed in block #%d at %s</string>
    <string name="tx_status_unknown">Unknown (you found a bug)</string>
    <string name="no_tx_details">No transaction details for [%s]</string>
    <string name="no_guldensync_warning_title">Invalid QR code</string>
    <string name="no_guldensync_warning">This QR code does not contain a valid Gulden sync code, please try again with a valid code.</string>
    <string name="failed_guldensync_warning_title">Could not perform link</string>
    <string name="failed_guldensync_unconfirmed_funds_message">Some of your funds are awaiting confirmation, please allow for them to fully confirm before attempting the link process again.</string>
    <string name="guldensync_info_title">Link with desktop wallet</string>
    <string name="guldensync_info_message_non_empty_wallet">You are about to establish a link with your desktop wallet. The current addresses in this wallet will be deleted and no longer available after the link is established. The current funds in this wallet will be transferred into the desktop wallet before the link is established, and will be temporarily unavailable from this wallet until the link finishes establishing. Please ensure you save a copy of your old recovery phrase somewhere in case you ever find the need to access these addresses again.</string>
    <string name="guldensync_info_message_empty_wallet">You are about to establish a link with your desktop wallet. The current addresses in this wallet will be deleted and no longer available after the link is established. Please ensure you save a copy of your old recovery phrase somewhere in case you ever find the need to access these addresses again.</string>
    <string name="preference_fragment_title">Preferences</string>
    <string name="preference_fragment_recovery_label">Recovery phrase</string>
    <string name="preference_fragment_link_label">Link wallet</string>
    <string name="preference_fragment_pass_code_label">Change passcode</string>
    <string name="preference_fragment_rescan_label">Rescan wallet</string>
    <string name="preference_fragment_remove_label">Remove wallet</string>
    <string name="preference_fragment_fiat_label">Local currency</string>
    <string name="preference_fragment_notification_label">Notifications</string>
    <string name="preference_fragment_background_sync_label">Background synchronisation</string>
    <string name="send_coins_label_add_to_address_book">Add to address book</string>
    <string name="send_coins_label_remove_from_address_book">Remove from address book</string>
    <string name="send_fragment_scan_label">Scan QR</string>
    <string name="send_fragment_clipboard_label">Clipboard</string>
    <string name="chain_status_label_probable_height">Probable height</string>
    <string name="chain_status_label_partial_height">Partial chain height</string>
    <string name="chain_status_label_processed_height">Processed height</string>
    <string name="chain_status_label_chain_offset">Partial chain offset</string>
    <string name="chain_status_label_chain_length">Partial chain length</string>
    <string name="chain_status_label_pruned_height">Pruned below height</string>
    <string name="title_peers">Peers</string>
    <string name="title_blocks">Blocks</string>
    <string name="title_processing">Processing</string>
    <string name="rescan_confirm_msg">Rescanning the blockchain can take a long time. Are you sure?</string>
    <string name="rescan_confirm_title">Rescan?</string>
    <string name="rescan_confirm_btn">Rescan</string>
    <string name="cancel_btn">Cancel</string>
    <string name="rescan_started">Rescan started</string>
    <string name="upgrade_wrong_password">Wrong password?</string>
    <string name="upgrade_explanation">Gulden requires an update. This can take a few minutes, but Gulden will be faster, easier to use and more lightweight as a result.</string>
    <string name="upgrade_btn">Upgrade</string>
    <string name="upgrade_enter_password">Enter your password</string>
    <string name="upgrade_enter_password_hint">PIN</string>
    <string name="upgrade_start_fresh">Don\'t upgrade, start fresh</string>
    <string name="upgrade_start_fresh_desription">If you don\'t have the recovery phrase of your old wallet you will lose it forever if you start fresh. Are you sure?</string>
    <string name="upgrade_start_fresh_title">Start fresh?</string>
    <string name="notify_received">Funds received</string>
    <string name="notify_sent">Funds sent</string>
    <string name="unlock">Unlock</string>
    <string name="access_code_entry_title">Access code for \"Gulden\"</string>
    <plurals name="access_code_entry_remaining">
        <item quantity="one">%d attempt remaining</item>
        <item quantity="other">%d attempts remaining</item>
    </plurals>
    <string name="access_code_choose_upgrade_title">Choose your new \"Gulden\" access code</string>
    <string name="access_code_choose_title">Choose your \"Gulden\" access code</string>
    <string name="access_code_choose_verify">Verify your access code</string>
    <string name="access_code_choose_hint">6 digit PIN</string>
    <string name="show_recovery_msg">Don\'t show your recovery phrase to anyone, or they will be able to spend your Gulden.</string>
    <string name="send_coins_error_acknowledge">OK</string>
    <string name="authentication_blocked_title">Wallet disabled</string>
    <string name="authentication_blocked_msg_recovery">Try again %s or choose a new access code using your recovery phrase.</string>
    <string name="authentication_blocked_msg">Try again %s.</string>
    <string name="authentication_blocked_later_btn">Try later</string>
    <string name="authentication_blocked_choose_new_btn">Choose new code</string>
    <string name="access_code_recovery_incorrect">Incorrect recovery phrase.</string>
    <string name="preference_linked_recovery_descr">View your recovery phrase on your desktop app.</string>
    <string name="remove_wallet_auth_title">Remove wallet</string>
    <string name="remove_wallet_auth_desc_recovery_warn">If you don\'t have the recovery phrase of your wallet you will lose it forever if you remove it now, also for funds received in the future on its old addresses.\n\n</string>
    <string name="remove_wallet_auth_desc">Enter access code to proceed and remove your wallet.</string>
    <string name="change_passcode_auth_title">Change code</string>
    <string name="change_passcode_auth_desc">Enter old access code to proceed and change to a new code.</string>
    <string name="wallet_birth_heading">How old is this wallet?</string>
    <string name="wallet_birth_less_than_a_month">Less than a month</string>
    <string name="wallet_birth_less_than_a_year">Less than a year</string>
    <string name="wallet_birth_unsure">Older / I\'m not sure</string>
    <string name="link_wallet_auth_desc">Enter access code to proceed and link your wallet.</string>
    <string name="numeric_keypad_send_button">Send</string>
    <string name="preferences_support_button">Support</string>
    <string name="preferences_advanced_button">Advanced</string>
    <string name="clipboard_no_valid_address">No valid Gulden address on clipboard</string>
    <string name="transaction_confirmation_text_conflicted">Conflicted</string>
    <string name="transaction_confirmation_text_abandoned">Abandoned</string>
    <string name="transaction_confirmation_text_pending">Pending</string>
    <string name="receive_fragment_share_title">Share Gulden address</string>
    <plurals name="transaction_confirmation_text">
        <item quantity="one">%d confirmation</item>
        <item quantity="other">%d confirmations</item>
    </plurals>
    <string name="preferences_license_button">License</string>
    <string name="license_title">License</string>
    <string name="tx_detail_wallet_address">Wallet address</string>
    <string name="tx_detail_sending_address">Sending address</string>
    <string name="tx_detail_payment_address">Payment address</string>
    <string name="tx_detail_network_fee">Gulden network fee</string>
    <string name="iban_account_holder_info_text">Enter the correct name of the account holder to prevent delay.</string>
    <string name="iban_account_holder_name">Name</string>
    <string name="iban_account_holder_description">Description (optional)</string>
    <string name="preference_fragment_link_summary">Link your mobile wallet with your desktop wallet</string>
    <string name="preference_fragment_remove_summary">Remove this wallet in order to start or recover another wallet</string>
    <string name="preference_fragment_unlink_label">Unlink wallet</string>
    <string name="preference_fragment_unlink_summary">Unlink this wallet in order to start or recover another wallet</string>
</resources>