<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2018-2022 The Centure developers
Authored by: Malcolm MacLeod (mmacleod@gmx.com)
Distributed under the GNU Lesser General Public License v3, see the accompanying
file COPYING
!-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:title="Wallet"
    tools:context=".main_activity_fragments.SettingsFragment">
    <Preference
        android:key="recovery_view_preference"
        android:layout="@layout/pref_view_recovery"
        android:persistent="false"
        android:summary=""
        android:title="@string/preference_fragment_recovery_label"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:key="recovery_linked_preference"
        android:persistent="false"
        android:summary="@string/preference_linked_recovery_descr"
        android:title="@string/preference_fragment_recovery_label"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:key="preference_link_wallet"
        android:persistent="false"
        android:summary="@string/preference_fragment_link_summary"
        android:title="@string/preference_fragment_link_label"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:key="preference_change_pass_code"
        android:persistent="false"
        android:summary=""
        android:title="@string/preference_fragment_pass_code_label"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:key="preference_rescan_wallet"
        android:persistent="false"
        android:summary=""
        android:title="@string/preference_fragment_rescan_label"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:key="preference_remove_wallet"
        android:persistent="false"
        android:summary="@string/preference_fragment_remove_summary"
        android:title="@string/preference_fragment_remove_label"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:key="preference_unlink_wallet"
        android:persistent="false"
        android:summary="@string/preference_fragment_unlink_summary"
        android:title="@string/preference_fragment_unlink_label"
        app:iconSpaceReserved="false"
        tools:ignore="UnusedAttribute" />
</PreferenceScreen>
