<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2018-2022 The Centure developers
Authored by: Malcolm MacLeod (mmacleod@gmx.com)
Distributed under the Libre Chain License, see the accompanying
file COPYING
!-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_glyphicons_219_circle_arrow_top"
        android:title="@string/title_send" />

    <item
        android:id="@+id/navigation_receive"
        android:icon="@drawable/ic_glyphicons_220_circle_arrow_down"
        android:title="@string/title_receive" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_glyphicons_115_list"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_glyphicons_137_cogwheel"
        android:title="@string/title_settings" />

</menu>
