<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2018 The Gulden developers
Authored by: Malcolm MacLeod (mmacleod@webmail.co.za)
Distributed under the GULDEN software license, see the accompanying
file COPYING
!-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:title="@string/preference_fragment_title"
    tools:context=".main_activity_fragments.SettingsFragment">

    <PreferenceCategory
        android:title="Wallet"
        app:iconSpaceReserved="false">
        <Preference
            android:key="recovery_view_preference"
            android:layout="@layout/pref_view_recovery"
            android:persistent="false"
            android:summary=""
            android:title="@string/preference_fragment_recovery_label"
            app:iconSpaceReserved="false"
            tools:ignore="UnusedAttribute" />

        <Preference
            android:key="recovery_linked_preference"
            android:persistent="false"
            android:summary="@string/preference_linked_recovery_descr"
            android:title="@string/preference_fragment_recovery_label"
            app:iconSpaceReserved="false"
            tools:ignore="UnusedAttribute" />

        <Preference
            android:key="preference_link_wallet"
            android:persistent="false"
            android:summary="Link your mobile wallet with your desktop wallet"
            android:title="@string/preference_fragment_link_label"
            app:iconSpaceReserved="false"
            tools:ignore="UnusedAttribute" />

        <Preference
            android:key="preference_change_pass_code"
            android:persistent="false"
            android:summary=""
            android:title="@string/preference_fragment_pass_code_label"
            app:iconSpaceReserved="false"
            tools:ignore="UnusedAttribute" />

        <Preference
            android:key="preference_rescan_wallet"
            android:persistent="false"
            android:summary=""
            android:title="@string/preference_fragment_rescan_label"
            app:iconSpaceReserved="false"
            tools:ignore="UnusedAttribute" />

        <Preference
            android:key="preference_remove_wallet"
            android:persistent="false"
            android:summary="Remove this wallet in order to start or recover another wallet"
            android:title="@string/preference_fragment_remove_label"
            app:iconSpaceReserved="false"
            tools:ignore="UnusedAttribute" />

        <Preference
            android:key="preference_unlink_wallet"
            android:persistent="false"
            android:summary="Unlink this wallet in order to start or recover another wallet"
            android:title="Unlink wallet"
            app:iconSpaceReserved="false"
            tools:ignore="UnusedAttribute" />
    </PreferenceCategory>

    <Preference
        android:key="preference_local_currency"
        android:summary=""
        app:iconSpaceReserved="false"
        android:defaultValue="@string/default_currency"
        android:title="@string/preference_fragment_fiat_label"
        tools:ignore="UnusedAttribute" />

    <ListPreference
        android:key="preference_background_sync"
        app:iconSpaceReserved="false"
        android:title="@string/preference_fragment_background_sync_label"
        android:summary="%s"
        android:entries="@array/background_sync_entries"
        android:entryValues="@array/background_sync_values"
        android:defaultValue="@string/background_sync_default" />

    <SwitchPreference
        android:key="preference_notify_transaction_activity"
        app:iconSpaceReserved="false"
        android:persistent="true"
        android:defaultValue="true"
        android:summary=""
        android:title="@string/preference_fragment_notification_label"
        tools:ignore="UnusedAttribute" />

    <Preference
        android:key="preference_about_app"
        app:iconSpaceReserved="false"
        android:persistent="false"
        android:summary=""
        android:layout="@layout/pref_about_app"
        tools:ignore="UnusedAttribute" />



</PreferenceScreen>
