<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2018-2022 The Centure developers
Authored by: Malcolm MacLeod (mmacleod@gmx.com)
Distributed under the GNU Lesser General Public License v3, see the accompanying
file COPYING
!-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_peers"
        android:icon="@drawable/ic_fontawesome_chart_network"
        android:title="@string/title_peers" />

    <item
        android:id="@+id/navigation_blocks"
        android:icon="@drawable/ic_fontawesome_cube"
        android:title="@string/title_blocks" />

    <item
        android:id="@+id/navigation_processing"
        android:icon="@drawable/ic_fontawesome_wave_pulse"
        android:title="@string/title_processing" />

</menu>
