<?xml version="1.0" encoding="utf-8"?><!--
Copyright (c) 2018-2019 The Gulden developers
Authored by: Malcolm MacLeod (mmacleod@gmx.com), Willem de Jonge (willem@isnapp.nl)
Distributed under the GULDEN software license, see the accompanying
file COPYING
!-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/veryLightGray"
    tools:context=".TransactionInfoActivity"
    tools:showIn="@layout/activity_transaction_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".TransactionInfoActivity"
        tools:showIn="@layout/activity_transaction_info">


        <TextView
            android:id="@+id/transactionId_label"
            style="@style/TxDetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_id" />

        <TextView
            android:id="@+id/transactionId"
            style="@style/TxDetailParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_details_item_spacing" />

        <TextView
            android:id="@+id/status_label"
            style="@style/TxDetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status"
            style="@style/TxDetailParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_details_item_spacing" />

        <TextView
            android:id="@+id/amount_label"
            style="@style/TxDetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_label" />

        <TextView
            android:id="@+id/amount"
            style="@style/TxDetailParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_details_item_spacing" />

        <TextView
            android:id="@+id/from_label"
            style="@style/TxDetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_label" />

        <LinearLayout
            android:id="@+id/from_container"
            style="@style/TxDetailParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_details_item_spacing" />

        <TextView
            android:id="@+id/to_label"
            style="@style/TxDetailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_label" />

        <LinearLayout
            android:id="@+id/to_container"
            style="@style/TxDetailParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>
