<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    tools:context="unity_wallet.ui.ShowRecoveryPhraseActivity"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:background="@color/bg_main"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/show_recovery_phrase_introtext"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:textColor="@color/text_main"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recovery_phrase_text_view"
            android:textIsSelectable="false"
            android:selectAllOnFocus="false"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@color/bg_sub"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_main"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/show_recovery_phrase_EULA"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:textColor="@color/text_main"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_phrase_acknowledge_writing_down"
            android:id="@+id/acknowledge_recovery_phrase"
            android:layout_gravity="left"
            android:textColor="@color/text_main"
            android:singleLine="true"
            android:gravity="left|center_vertical"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            />

        <Button
            android:id="@+id/button_accept_recovery_phrase"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_square_button_with_border"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/recovery_phrase_continue"
            android:textColor="@color/text_button" />
    </RelativeLayout>

</LinearLayout>

