<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2019-2022 The Centure developers
Authored by: Willem de Jonge (willem@isnapp.nl)
Distributed under the Libre Chain License, see the accompanying
file COPYING
!-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    tools:context="unity_wallet.UpgradeActivity">

        <ImageView
            android:id="@+id/AppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_content_description_logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:clickable="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:justificationMode="inter_word"
        android:text="@string/upgrade_explanation"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_main"
        app:layout_constraintBottom_toTopOf="@+id/upgradeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppLogo" />

    <Button
        android:id="@+id/upgradeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/shape_square_button"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/upgrade_btn"
        android:textColor="@color/text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restartFresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/upgrade_start_fresh"
        android:textColor="@color/text_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

